<resources>
    <!--Login Screen-->
    <string name="app_name">Stuff Trac</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Sign in</string>
    <string name="facebook">Login With Facebook</string>
    <string name="google">Login With Google+</string>

    <!-- Mock Credentials -->
    <string name="email_cred">user</string>
    <string name="pass_cred">user</string>

    <!-- My Lists -->
    <string name="title_activity_main">My Lists</string>
    <string name="title_activity_add_list">Add List</string>

    <!-- My Profile -->
    <string name="title_activity_profile">My Profile</string>
    <string name="title_activity_profile_name">Name: </string>
    <string name="title_activity_profile_changeImg">Change Profile Photo </string>

    <!-- View Item -->
    <string name="item_name">Item Name</string>

    <!--Friends-->
    <string name="title_activity_friends">My Friends</string>

    <!--Add Friend-->
    <string name="title_activity_add_friend">Add Friend</string>

    <!--Items View List-->
    <string name="title_activity_list_of_items">Items</string>

    <!-- View My Item -->
    <string name="title_activity_view_my_item">ViewMyItemActivity</string>
    <string name="title_edit_button_view_my_item">Edit</string>
    <string name="title_remove_button_view_my_item">Remove</string>

    <!--Edit Item View-->
    <string name="title_activity_edit_item">Edit Item</string>
    <string name="title_activity_edit_item_image_url">Image Url: </string>
    <string name="title_activity_edit_item_image_title">Title: </string>
    <string name="title_activity_edit_item_image_description">Description: </string>

    <!--Form strings-->
    <string name="submit_button">Submit</string>
    <string name="done_button">Done</string>
    <string name="title_label">List: </string>
    <string name="category_label">Category: </string>
    <string name="name_label">Name: </string>
    <string name="description_label">Description: </string>

    <string name="category_prompt">Choose a Category</string>

    <string-array name="category_arrays">
        <item>Movies</item>
        <item>Board Games</item>
        <item>Video Games</item>
        <item>Music</item>
        <item>Books</item>
    </string-array>
    <string name="title_activity_network_test">NetworkTestActivity</string>
    <string name="title_activity_friends_lists"></string>
    <string name="title_activity_friends_list_of_items">FriendsListOfItemsActivity</string>

    <!--Camera Activity-->
    <string name="title_activity_camera">Take Snapshot</string>

    <!--View Friend Item-->
    <string name="title_activity_view_friend_item">ViewFriendItemActivity</string>
    <string name="request_activity_view_friend_item">Request</string>
    <string name="title_activity_send_message">SendMessageActivity</string>
    <string name="title_activity_my_lists">My Lists</string>
    <string name="title_activity_notifications">NotificationsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_notification">NotificationActivity</string>

    <!--Friend Requests Activity-->
    <string name="title_activity_friend_requests">Friend Requests</string>
    <!--Item Requests Activity-->
    <string name="title_activity_item_requests">Item Requests</string>
    <string name="title_activity_search">Search</string>

    <string name="title_activity_edit_list">EditListActivity</string>

    <string name="NewUserButtonText">Register</string>
    <string name="title_activity_create_user">CreateUserActivity</string>
    <string name="title_activity_drawer_test">DrawerTestActivity</string>

    <string name="menu_item_requests">Item Requests\t\t\t\t\t\t\t</string>
    <string name="menu_friend_requests">Friend Requests\t\t\t\t\t\t</string>
    <string name="menu_lent_items">Lent Items\t\t\t\t\t\t\t\t\t</string>
    <string name="menu_borrowed_items">Borrowed Items\t\t\t\t\t\t</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_lended_items">My Lent Items</string>
    <string name="title_activity_borrowed_items">My Borrowed Items</string>
    <string name="editValueButton">editButton</string>
    <string name="deleteValueButton">deleteButton</string>


</resources>
