<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context="com.tbd.appprototype.EditListActivity"
tools:showIn="@layout/activity_edit_list">


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textSize="16dp"
                android:text="@string/title_activity_edit_item_image_title"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/list_title_textbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:ems="10"
                android:textColor="@color/black"
                app:theme="@style/Theme.AppCompat.Light"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:textSize="16dp"
                android:text="@string/title_activity_edit_item_image_description"
                android:textColor="@color/black"/>

            <Spinner
                android:id="@+id/category_list_items"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:ems="10"
                android:entries="@array/category_arrays"
                android:prompt="@string/category_prompt"
                app:theme="@style/Theme.AppCompat.Light"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_submit_list_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:background="@color/dark_blue"
                android:text="@string/submit_button"
                android:layout_marginTop="16dp"
                android:onClick="onSubmit"/>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />

        </LinearLayout>
        <ImageView
            android:id="@+id/prev_image_edit"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"/>


    </LinearLayout>
</ScrollView>

</FrameLayout>