<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/login_with_logo"
    tools:context="com.tbd.appprototype.LoginActivity">


    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <!-- App Login -->
            <EditText
                android:id="@+id/email_address"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_marginTop="90dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="#AFAFAF"
                android:hint="@string/username"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="#AFAFAF"
                android:hint="@string/password"/>

            <Button
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif"
                android:text="Sign in"
                android:textAlignment="center"
                android:background="#54b7ff"
                android:textColor="@color/white"
                android:onClick="onLogin"
                />

            <Button
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-light"
                android:text="@string/NewUserButtonText"
                android:textAlignment="center"
                android:background="#00000000"
                android:textColor="#AFAFAF"
                android:onClick="goToCreateUser"
                android:id="@+id/button" />

        </LinearLayout>
    </LinearLayout>
    </ScrollView>

</LinearLayout>
