<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context="com.tbd.appprototype.AddListActivity"
tools:showIn="@layout/activity_add_item">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
    
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:textSize="16dp"
                    android:text="@string/name_label"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/itemName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:ems="10"
                    android:textColor="@color/black"
                    app:theme="@style/Theme.AppCompat.Light"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:textSize="16dp"
                    android:text="@string/description_label"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/itemDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:ems="10"
                    android:textColor="@color/black"
                    app:theme="@style/Theme.AppCompat.Light"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/prev_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/upload_image_thumbnail"
                android:layout_gravity="center_horizontal"
                android:onClick="addImage"/>

            <Button
                android:id="@+id/btnDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:background="@color/dark_blue"
                android:text="@string/submit_button"
                android:layout_marginTop="16dp"
                android:onClick="onSubmit"/>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>
